@@ -1,5 +1,11 @@
 2005-07-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/list.h :
+	* lib/list.c :
+
+	  - Added a traverse list function that will go through each node of a
+	    given list and call a given function.
+
 	* test/mem_test.sh :
 
 	  - Removed BASH extensions like arrays, $[], etc.
